[package]
name = "tweet_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.16.0"
dotenv = "0.15.0"
teloxide = "0.9"
thiserror = "1.0.30"
futures = "0.3"
tokio = {version = "1.17.0", features = ["macros","rt-multi-thread","time"]}